--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nike React</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nike React</title>
+  <script src="https://kit.fontawesome.com/8b969c7bc4.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+
+  <!-- header section start -->
+
+  <header>
+    <!-- nav section start -->
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="images/logo.png" alt="">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item px-3">
+              <a class="nav-link active fw-medium" aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link active fw-semibold" aria-current="page" href="#">Product</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link active fw-semibold" aria-current="page" href="#">About us</a>
+            </li>
+            <li class="nav-item px-3">
+              <a class="nav-link active fw-semibold" aria-current="page" href="#">Contact us</a>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- nav section end -->
+
+
+
+    <div class="d-flex">
+      <div class="w-50">
+        <img class="img-fluid" src="images/Group 33092.png" alt="">
+      </div>
+      <div class="ms-5 ps-5 d-flex align-items-center">
+        <div>
+            <h1 class="header text-uppercase">Nike React</h1>
+            <h1 class="header different text-uppercase">Infinity Run 2</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing <br> and typesetting industry.</p>
+            <button class="btn btn-primary px-4 py-2"><i class="fa-solid fa-cart-arrow-down"></i> Buy Now</button>
+        </div>
+      </div>
+    </div>
+
+  </header>
+
+
+ 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"></script>
 </body>
+
 </html>
