--- a/index.html
+++ b/index.html
@@ -48,25 +48,112 @@
     <!-- nav section end -->
 
 
-
-    <div class="d-flex">
-      <div class="w-50">
-        <img class="img-fluid" src="images/Group 33092.png" alt="">
-      </div>
-      <div class="ms-5 ps-5 d-flex align-items-center">
-        <div>
+    <!-- slider section start -->
+    <section class="container">
+      <div class="d-lg-flex flex-direction">
+        <div class="learge-device">
+          <img class="img-fluid" src="images/Group 33092.png" alt="">
+        </div>
+        <div class="ms-lg-5 ps-lg-5 pt-lg-0 pt-5 d-flex align-items-center">
+          <div>
             <h1 class="header text-uppercase">Nike React</h1>
             <h1 class="header different text-uppercase">Infinity Run 2</h1>
             <p>Lorem Ipsum is simply dummy text of the printing <br> and typesetting industry.</p>
             <button class="btn btn-primary px-4 py-2"><i class="fa-solid fa-cart-arrow-down"></i> Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- slider section end -->
+
+  </header>
+  <!-- header end -->
+
+
+  <div class="container py-5 my-5">
+    <h1>CASUAL SHOES</h1>
+    <div class="row pt-5 g-5">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-12 shadow-lg p-3 rounded">
+        <img class="img-fluid bg-light" src="images/Daco_1703273 1.png" alt="">
+        <h1 class="text-success fw-bold fs-2 mt-3">Nike Shoe</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="d-flex justify-content-between">
+          <h1 class="text-danger">$234</h1>
+          <div>
+            <button class="btn btn-primary px-4 py-2"><i class="fa-solid fa-cart-arrow-down"></i> Buy Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-12 shadow-lg p-3 rounded">
+        <img class="img-fluid bg-light" src="images/Daco_1703273 1.png" alt="">
+        <h1 class="text-success fw-bold fs-2 mt-3">Nike Shoe</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="d-flex justify-content-between">
+          <h1 class="text-danger">$234</h1>
+          <div>
+            <button class="btn btn-primary px-4 py-2"><i class="fa-solid fa-cart-arrow-down"></i> Buy Now</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 col-sm-12 col-12 shadow-lg p-3 rounded">
+        <img class="img-fluid bg-light" src="images/Daco_1703273 1.png" alt="">
+        <h1 class="text-success fw-bold fs-2 mt-3">Nike Shoe</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="d-flex justify-content-between">
+          <h1 class="text-danger">$234</h1>
+          <div>
+            <button class="btn btn-primary px-4 py-2"><i class="fa-solid fa-cart-arrow-down"></i> Buy Now</button>
+          </div>
         </div>
       </div>
     </div>
+  </div>
 
-  </header>
 
 
- 
+
+  <div class="container">
+    <h1>Formal shoes</h1>
+    <div class="row pt-5 g-5">
+      <div class="col-lg-4 col-md-6 col-sm-12 col-12 shadow-lg p-3 rounded">
+        <img class="img-fluid bg-light" src="images/Mask Group.png" alt="">
+        <h1 class="text-success fw-bold fs-3 mt-3">Prestige High-Cut Leather</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="d-flex justify-content-between">
+          <h1 class="text-danger">$234</h1>
+          <div>
+            <button class="btn btn-primary px-4 py-2"><i class="fa-solid fa-cart-arrow-down"></i> Buy Now</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 col-sm-12 col-12 shadow-lg p-3 rounded">
+        <img class="img-fluid bg-light" src="images/Rectangle 39.png" alt="">
+        <h1 class="text-success fw-bold fs-3 mt-3">Slip-On Formal Shoe</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="d-flex justify-content-between">
+          <h1 class="text-danger">$234</h1>
+          <div>
+            <button class="btn btn-primary px-4 py-2"><i class="fa-solid fa-cart-arrow-down"></i> Buy Now</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 col-sm-12 col-12 shadow-lg p-3 rounded">
+        <img class="img-fluid bg-light" src="images/Rectangle 38.png" alt="">
+        <h1 class="text-success fw-bold fs-3 mt-3">Slip-On Formal Shoe</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <div class="d-flex justify-content-between">
+          <h1 class="text-danger">$234</h1>
+          <div>
+            <button class="btn btn-primary px-4 py-2"><i class="fa-solid fa-cart-arrow-down"></i> Buy Now</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"></script>
 </body>
